--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">View Seattle Data</a></li>
-            <li><a href="#">How to get favorites</a></li>
+            <li><a href="{{ url_for('data') }}">View Seattle Data</a></li>
+            <li><a href="{{ url_for('favorites') }}">How to get favorites</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ url_for('welcome') }}">Welcome!</a></li>
