--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -14,7 +14,7 @@
   </head>
  
   <body>
-  	<img src="{{url_for('static', filename='header.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
+  	<img src="{{url_for('static', filename='neighborhoods.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
 
     <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
