working on implementing the submit button

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,8 +57,11 @@
               <div class="form-row">
                 <div class="col-12 col-lg-30 mb-2 mb-md-0">
               <center>
-                  <input type="file" id="myFile">
-                  <input type="submit">
+                <form method=post enctype=multipart/form-data>
+			      <p><input type=file name=file>
+			         <input type=submit value=Upload>
+			      </p>
+			    </form>
                 </div>
                 <div class="col-12 col-md-3">
               </center>
