--- a/templates/data.html
+++ b/templates/data.html
@@ -46,11 +46,53 @@
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
     </nav>
-  <div class="table" style="width:80%; height:auto; margin:0 auto;">
-    {% block body %}
-    {{ data|safe }}
-    {% endblock %}  
-  </div>
+  <table border="1">
+  <thead>
+    <th>Property Type</th>
+    <th>Address</th>
+    <th>City</th>
+    <th>State</th>
+    <th>Zip</th>
+    <th>Price</th>
+    <th>Beds</th>
+    <th>Baths</th>
+    <th>Location</th>
+    <th>Sqft</th>
+    <th>Lot Size</th>
+    <th>Yr Built</th>
+    <th>Days on Market</th>
+    <th>Price/Sqft</th>
+    <th>HOA/Mo.</th>
+    <th>URl</th>
+    <th>Description</th>
+  </thead>
+  <tbody>
+    {% for col1, col2, col3, 
+  		col4, col5, col6, col7, 
+  		col8, col9, col10, col11, 
+  		col12, col13, col14, col15, 
+  		col16, col17 in data %}  <!--start for loop over variable data-->
+      <tr>                  <!-- on each row -->
+        <td>{{ col1 }}</td>
+        <td>{{ col2 }}</td> 
+        <td>{{ col3 }}</td> 
+        <td>{{ col4 }}</td> 
+        <td>{{ col5 }}</td> 
+        <td>{{ col6 }}</td> 
+        <td>{{ col7 }}</td> 
+        <td>{{ col8 }}</td> 
+        <td>{{ col9 }}</td> 
+        <td>{{ col10 }}</td> 
+        <td>{{ col11 }}</td> 
+        <td>{{ col13 }}</td> 
+        <td>{{ col14 }}</td> 
+        <td>{{ col15 }}</td> 
+        <td>{{ col16 }}</td> 
+        <td>{{ col17 }}</td> 
+    </tr>                   <!-- end the row -->
+    {% endfor %}            <!-- end for loop -->
+</tbody>
+</table>
 
 </body>
 </html>
