favorites page complete

--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -43,5 +43,44 @@
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
     </nav>
+    <div class="section quicksummary  sticky " id="quick_summary_section" style="text-align: center;">
+		<h2>
+			<span class="mw-headline" id="Quick_Summary">Quick Summary</span></h2>
+				<div id="quicksummary" class="section_text">
+					<p>1. Go to <b><a href='redfin.com'>Redfin.com</a></b>.<br>
+					2. Login to your account.<br>
+					3. Scroll over your name in the top right corner.<br>
+					4. Click on 'favorites'.<br>
+					5. Click the 'Download' button.<br>
+					6. Save your favorites to your computer.<br>
+					<span id="summary_last_sentence"></span><span id="summary_position" class="sumpos_top"></span></p>
+				</div>
+	</div>
+	<div class="features-icons-icon d-flex">
+		<p style="text-align: center;"> <b class="whb"> <br> Go to <a href='redfin.com'>Redfin.com</a> and login to your account.</b>
+			<br></br>
+  		<img src="{{url_for('static', filename='step-1.jpg')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
+  	</p>
+	</div>
+
+	<div class="features-icons-icon d-flex">
+		<p style="text-align: center;"> <b class="whb"> <br> Scroll over your name in the top right corner and click on 'favorites'.</b>
+			<br></br>
+  		<img src="{{url_for('static', filename='step-2.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
+	</p>
+	</div>
+
+	<div class="features-icons-icon d-flex">
+		<p style="text-align: center;"> <b class="whb"> <br> Click the 'Download' button.</b>
+			<br></br>
+  		<img src="{{url_for('static', filename='step-3.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
+	</p>
+	</div>		
+	<div class="features-icons-icon d-flex">
+		<p style="text-align: center;"> <b class="whb"> <br> Save the file somewhere you can find it.</b>
+			<br></br>
+  		<img src="{{url_for('static', filename='step-4.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
+  	</p>
+	</div>
 </body>
 </html>
