--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,10 @@
         border: 3px solid black;
         border-collapse: collapse;
 }
+
+.center
+{
+    display:inline-block;
+    margin-left:auto; 
+    margin-right:auto;
+}
