--- a/templates/data.html
+++ b/templates/data.html
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+    function sortTable(columnName){
+ 
+         var sort = $("#sort").val();
+         $.ajax({
+]          type:'post',
+          data:{columnName:columnName,sort:sort},
+          success: function(response){
+         
+           $("#tbl tr:not(:first)").remove();
+         
+           $("#tbl").append(response);
+           if(sort == "asc"){
+             $("#sort").val("desc");
+           }else{
+             $("#sort").val("asc");
+           }
+         
+          }
+         });
+        }
+</script>
+</script>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Housing Recommender">
@@ -12,14 +36,16 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <meta charset="utf-8" />
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}"/>
+	<link width="100" rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}"/>
 	<title>Show CSV</title>
   </head>
  
   <body>
-  	<img src="{{url_for('static', filename='neighborhoods.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
+  	 <img src="{{url_for('static', filename='neighborhoods.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
 
     <!-- Static navbar -->
+
+
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
 
@@ -37,8 +63,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">View Seattle Data</a></li>
+            <li><a href="#">Seattle Data Example</a></li>
             <li><a href="{{ url_for('favorites') }}">How to get favorites</a></li>
+            <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ url_for('welcome') }}">Welcome!</a></li>
@@ -46,40 +73,86 @@
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
     </nav>
-	<div style="text-align: center; width:70%;">
-	  <table width="100%" border="1" cellspacing="0" cellpadding="0">
-		<thead>
-		  	<tr>
-			    <th style="text-align: center; width:70%;">Property Type</th>
-			    <th style="text-align: center;">Address</th>
-			    <th style="text-align: center;">City</th>
-			    <th style="text-align: center;">State</th>
-			    <th style="text-align: center;">Zip</th>
-			    <th style="text-align: center;">Price</th>
-			    <th style="text-align: center;">Beds</th>
-			    <th style="text-align: center;">Baths</th>
-			    <th style="text-align: center;">Location</th>
-			    <th style="text-align: center;">Sqft</th>
-			    <th style="text-align: center;">Lot Size</th>
-			    <th style="text-align: center;">Yr Built</th>
-			    <th style="text-align: center;">Days on Market</th>
-			    <th style="text-align: center;">Price/Sqft</th>
-			    <th style="text-align: center;">HOA/Mo.</th>
-			    <th style="text-align: center; width:30%;">URL</th>
-			    <th style="text-align: center; width:30%;">Description</th>
-			  </tr>
-  		</thead>
-  	<tbody>
-    {% for col in data %}  <!--start for loop over variable data-->
-      <tr>
-      	{% for row in col %} 
-        <td>{{row}}</td>
-        {% endfor %}
+    <style type="text/css">
+          table.greyGridTable {
+            border: 2px solid #FFFFFF;
+            width: 100%;
+            text-align: center;
+            border-collapse: collapse;
+          }
+          table.greyGridTable td, table.greyGridTable th {
+            border: 1px solid #FFFFFF;
+            padding: 3px 4px;
+          }
+          table.greyGridTable tbody td {
+            font-size: 13px;
+          }
+          table.greyGridTable td:nth-child(even) {
+            background: #EBEBEB;
+          }
+          table.greyGridTable thead {
+            background: #FFFFFF;
+            border-bottom: 4px solid #333333;
+          }
+          table.greyGridTable thead th {
+            font-size: 15px;
+            font-weight: bold;
+            color: #333333;
+            text-align: center;
+            border-left: 2px solid #333333;
+          }
+          table.greyGridTable thead th:first-child {
+            border-left: none;
+          }
 
-      </tr>
-    {% endfor %}           <!-- end for loop -->
-	</tbody>
-  </table>
+          table.greyGridTable tfoot {
+            font-size: 14px;
+            font-weight: bold;
+            color: #333333;
+            border-top: 4px solid #333333;
+          }
+          table.greyGridTable tfoot td {
+            font-size: 14px;
+          }
+          table.greyGridTable tfoot .links {
+            text-align: right;
+          }
+          table.greyGridTable tfoot .links a{
+            display: inline-block;
+            background: #333333;
+            color: #FFFFFF;
+            padding: 2px 8px;
+            border-radius: 5px;
+          }
+        </style>
+         <script src="https://cdn3.vox-cdn.com/uploads/chorus_asset/file/7447791/sorttable.0.js"></script>
+         <table class="sortable greyGridTable" width="" border="" cellpadding="0" cellspacing="0">
+        		<thead>
+              <tr>
+              <th align="center">Type</th>
+              <th align="center">Address</th>
+              <th align="center">Neighborhood</th>
+              <th align="center">Price</th>
+              <th align="center">Beds</th>
+              <th align="center">Baths</th>
+              <th align="center">SqFt</th>
+              <th align="center">Lot Size</th>
+              <th align="center">Days on Market</th>
+              <th align="center">HOA/Mo.</th>
+              <th align="center">URL</th>
+              </tr>
+          		</thead>
+          	<tbody>
+            {% for row in data %}  <!--start for loop over variable data-->
+              <tr>
+              	{% for col in row %} 
+                <td>{{col}}</td>
+                {% endfor %}
+
+              </tr>
+            {% endfor %}           <!-- end for loop -->
+        	</tbody>
+          </table>
 </div>
 </body>
 </html>
