--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script> 
+        $(function() {
+            $('#upload-file-btn').click(function() {
+                var form_data = new FormData($('#upload-file')[0]);
+                $.ajax({
+                    type: 'POST',
+                    url: '/uploadajax',
+                    data: form_data,
+                    contentType: false,
+                    cache: false,
+                    processData: false,
+                    async: false,
+                    success: function(data) {
+                        $('div#result').html(data)
+                        console.log('Success!');
+                    },
+                });
+            });
+        });
+        </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,8 +54,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="{{ url_for('data') }}">View Seattle Data</a></li>
+            <li><a href="{{ url_for('data') }}">Seattle Data Example</a></li>
             <li><a href="{{ url_for('favorites') }}">How to get favorites</a></li>
+            <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ url_for('welcome') }}">Welcome!</a></li>
@@ -50,18 +71,13 @@
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <h1 class="mb-5">Find houses that better suit your circumstances!</h1>
-            <h3 class="mb-5">Upload your favorite houses dataset here (csv format only)</h3>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
               <div class="form-row">
                 <div class="col-12 col-lg-30 mb-2 mb-md-0">
               <center>
-                <form method=post enctype=multipart/form-data>
-			      <p><input type=file name=file>
-			         <input type=submit value=Upload>
-			      </p>
-			    </form>
+                <div id="result"> </div>
                 </div>
                 <div class="col-12 col-md-3">
               </center>
@@ -86,7 +102,7 @@
   				<img src="{{url_for('static', filename='customized.png')}}" style="width:30%; height:30%; margin:0 auto;"/>
               </div>
               <h3>Customized</h3>
-              <p class="lead mb-0">Get houses based on your favorites in Redfin</p>
+              <p class="lead mb-0">Get houses similar to houses you like on Redfin</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -104,7 +120,7 @@
   				<img src="{{url_for('static', filename='easy.png')}}" style="width:20%; height:20%; margin:0 auto;"/>
               </div>
               <h3>Easy to Use</h3>
-              <p class="lead mb-0">Ready to use with your own favorite houses</p>
+              <p class="lead mb-0">Ready to use with your own favorite houses on <a href='redfin.com'>Redfin.com</a></p>
             </div>
           </div>
         </div>
