--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -1,6 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style type="text/css">
+          table.greyGridTable {
+            border: 2px solid #FFFFFF;
+            width: 100px;
+            text-align: center;
+            border-collapse: collapse;
+          }
+          table.greyGridTable td, table.greyGridTable th {
+            border: 1px solid #FFFFFF;
+            padding: 3px 4px;
+          }
+          table.greyGridTable tbody td {
+            font-size: 13px;
+          }
+          table.greyGridTable td:nth-child(even) {
+            background: #EBEBEB;
+          }
+          table.greyGridTable thead {
+            background: #FFFFFF;
+            border-bottom: 4px solid #333333;
+          }
+          table.greyGridTable thead th {
+            font-size: 15px;
+            font-weight: bold;
+            color: #333333;
+            text-align: center;
+            border-left: 2px solid #333333;
+          }
+          table.greyGridTable thead th:first-child {
+            border-left: none;
+          }
+
+          table.greyGridTable tfoot {
+            font-size: 14px;
+            font-weight: bold;
+            color: #333333;
+            border-top: 4px solid #333333;
+          }
+          table.greyGridTable tfoot td {
+            border: 1px solid #FFFFFF;
+            font-size: 14px;
+          }
+          table.greyGridTable tfoot .links {
+            text-align: right;
+          }
+          table.greyGridTable tfoot .links a{
+            display: inline-block;
+            background: #333333;
+            color: #FFFFFF;
+            padding: 2px 8px;
+            border-radius: 5px;
+          }
+      </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,8 +88,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">View Seattle Data</a></li>
+            <li><a href="{{ url_for('data') }}">Seattle Data Example</a></li>
             <li><a href="{{ url_for('favorites') }}">How to get favorites</a></li>
+            <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ url_for('welcome') }}">Welcome!</a></li>
@@ -45,7 +99,8 @@
       </div><!-- /.container -->
     </nav>
       <div style="text-align: center; width:70%;">
-        <table width="50%" border="1" cellspacing="0" cellpadding="0">
+        <script src="https://cdn3.vox-cdn.com/uploads/chorus_asset/file/7447791/sorttable.0.js"></script>
+        <table class="greyGridTable sortable" width="100" border="1" cellpadding="0" cellspacing="0">
           <thead>
             <tr>
               <th style="text-align: center;">Favorited House</th>
@@ -66,7 +121,7 @@
           </thead>
           <tbody>
             {% for col in data %}  <!--start for loop over variable data-->
-            <tr>
+            <tr onMouseOver="this.bgColor='#C7D9EC'" onMouseOut="this.bgColor='#FFFFFF'">
               {% for row in col %} 
               <td>{{row}}</td>
               {% endfor %}
