--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +19,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
 
-        <!-- Brand and toggle get grouped for better mobile display -->
+          <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#recipes-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -30,8 +29,8 @@
           </button>
           <a class="navbar-brand" href="{{ url_for('index') }}">Housing Recommender</a>
         </div>
- 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+   
+          <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="#">Seattle Data Example</a></li>
@@ -45,43 +44,43 @@
       </div><!-- /.container -->
     </nav>
     <div class="section quicksummary  sticky " id="quick_summary_section" style="text-align: center;">
-		<h2>
-			<span class="mw-headline" id="Quick_Summary">Quick Summary</span></h2>
-				<div id="quicksummary" class="section_text">
-					<p>1. Go to <b><a href='redfin.com'>Redfin.com</a></b>.<br>
-					2. Login to your account.<br>
-					3. Scroll over your name in the top right corner.<br>
-					4. Click on 'favorites'.<br>
-					5. Click the 'Download' button.<br>
-					6. Save your favorites to your computer.<br>
-					<span id="summary_last_sentence"></span><span id="summary_position" class="sumpos_top"></span></p>
-				</div>
-	</div>
-	<div class="features-icons-icon d-flex">
-		<p style="text-align: center;"> <b class="whb"> <br> Go to <a href='redfin.com'>Redfin.com</a> and login to your account.</b>
+  		<h2>
+  			<span class="mw-headline" id="Quick_Summary">Quick Summary</span>
+      </h2>
+			<div id="quicksummary" class="section_text">
+				<p>1. Go to <b><a href='redfin.com'>Redfin.com</a></b>.<br>
+				2. Login to your account.<br>
+				3. Scroll over your name in the top right corner.<br>
+				4. Click on 'favorites'.<br>
+				5. Click the 'Download' button.<br>
+				6. Save your favorites to your computer.<br>
+				<span id="summary_last_sentence"></span>
+        <span id="summary_position" class="sumpos_top"></span></p>
+			</div>
+	  </div>
+    <div class="features-icons-icon d-flex">
+    	<p style="text-align: center;"> <b class="whb"> <br> Go to <a href='redfin.com'>Redfin.com</a> and login to your account.</b>
 			<br></br>
   		<img src="{{url_for('static', filename='step-1.jpg')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
-  	</p>
-	</div>
-
-	<div class="features-icons-icon d-flex">
-		<p style="text-align: center;"> <b class="whb"> <br> Scroll over your name in the top right corner and click on 'favorites'.</b>
-			<br></br>
-  		<img src="{{url_for('static', filename='step-2.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
-	</p>
-	</div>
-
-	<div class="features-icons-icon d-flex">
-		<p style="text-align: center;"> <b class="whb"> <br> Click the 'Download' button.</b>
-			<br></br>
-  		<img src="{{url_for('static', filename='step-3.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
-	</p>
-	</div>		
-	<div class="features-icons-icon d-flex">
-		<p style="text-align: center;"> <b class="whb"> <br> Save the file somewhere you can find it.</b>
-			<br></br>
-  		<img src="{{url_for('static', filename='step-4.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
-  	</p>
-	</div>
-</body>
+      </p>
+    </div>
+    <div class="features-icons-icon d-flex">
+		  <p style="text-align: center;"> <b class="whb"> <br> Scroll over your name in the top right corner and click on 'favorites'.</b>
+        <br></br>
+  		  <img src="{{url_for('static', filename='step-2.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
+      </p>
+    </div>
+    <div class="features-icons-icon d-flex">
+      <p style="text-align: center;"> <b class="whb"> <br> Click the 'Download' button.</b>
+        <br></br>
+  		  <img src="{{url_for('static', filename='step-3.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
+      </p>
+    </div>		
+    <div class="features-icons-icon d-flex">
+		  <p style="text-align: center;"> <b class="whb"> <br> Save the file somewhere you can find it.</b>
+        <br></br>
+  		  <img src="{{url_for('static', filename='step-4.png')}}" align="middle" style="width:70%; height:70%; margin:3 auto;"/>
+      </p>
+    </div>
+  </body>
 </html>
