changed columns that will appear in data

--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -107,15 +107,12 @@
               <th style="text-align: center;">Similarity Score</th>
               <th style="text-align: center; width:70%;">Property Type</th>
               <th style="text-align: center;">Address</th>
-              <th style="text-align: center;">City</th>
-              <th style="text-align: center;">State</th>
               <th style="text-align: center;">Price</th>
               <th style="text-align: center;">Beds</th>
               <th style="text-align: center;">Baths</th>
-              <th style="text-align: center;">Location</th>
+              <th style="text-align: center;">Location</th>S
               <th style="text-align: center;">Sqft</th>
               <th style="text-align: center;">Lot Size</th>
-              <th style="text-align: center;">Yr Built</th>
               <th style="text-align: center; width:30%;">URL</th>
             </tr>
           </thead>
