--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      div {
+          background-color: lightgrey;
+          width: 300px;
+          border: 25px solid red;
+          padding: 25px;
+          margin: 25px;
+      }
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,14 +57,14 @@
   			<span class="mw-headline" id="Quick_Summary">Quick Summary</span>
       </h2>
 			<div id="quicksummary" class="section_text">
-				<p>1. Go to <b><a href='redfin.com'>Redfin.com</a></b>.<br>
+				<div>1. Go to <b><a href='redfin.com'>Redfin.com</a></b>.<br>
 				2. Login to your account.<br>
 				3. Scroll over your name in the top right corner.<br>
 				4. Click on 'favorites'.<br>
 				5. Click the 'Download' button.<br>
 				6. Save your favorites to your computer.<br>
 				<span id="summary_last_sentence"></span>
-        <span id="summary_position" class="sumpos_top"></span></p>
+        <span id="summary_position" class="sumpos_top"></span></div>
 			</div>
 	  </div>
     <div class="features-icons-icon d-flex">
