--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <style>
-      div {
+      p {
           background-color: lightgrey;
           width: 300px;
           border: 25px solid red;
@@ -52,19 +52,21 @@
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
     </nav>
-    <div class="section quicksummary  sticky " id="quick_summary_section" style="text-align: center;">
+    <div class="section quicksummary  sticky " id="quick_summary_section">
   		<h2>
   			<span class="mw-headline" id="Quick_Summary">Quick Summary</span>
       </h2>
 			<div id="quicksummary" class="section_text">
-				<div>1. Go to <b><a href='redfin.com'>Redfin.com</a></b>.<br>
-				2. Login to your account.<br>
-				3. Scroll over your name in the top right corner.<br>
-				4. Click on 'favorites'.<br>
-				5. Click the 'Download' button.<br>
-				6. Save your favorites to your computer.<br>
-				<span id="summary_last_sentence"></span>
-        <span id="summary_position" class="sumpos_top"></span></div>
+        <center>
+  				<p>1. Go to <b><a href='redfin.com'>Redfin.com</a></b>.<br>
+  				2. Login to your account.<br>
+  				3. Scroll over your name in the top right corner.<br>
+  				4. Click on 'favorites'.<br>
+  				5. Click the 'Download' button.<br>
+  				6. Save your favorites to your computer.<br>
+  				<span id="summary_last_sentence"></span>
+          <span id="summary_position" class="sumpos_top"></span></p>
+        </center>
 			</div>
 	  </div>
     <div class="features-icons-icon d-flex">
