back to original stype

--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      p {
-          background-color: lightgrey;
-          width: 300px;
-          border: 25px solid red;
-          padding: 25px;
-          margin: 25px;
-      }
-    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,7 +43,7 @@
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
     </nav>
-    <div class="section quicksummary  sticky " id="quick_summary_section">
+    <div class="section quicksummary  sticky " id="quick_summary_section" style='text-align: center'>
   		<h2>
   			<span class="mw-headline" id="Quick_Summary">Quick Summary</span>
       </h2>
