minor picture changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
   </head>
  
   <body>
-  	<img src="{{url_for('static', filename='header.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
+  	<img src="{{url_for('static', filename='neighborhood2.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
 
     <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
