--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -68,7 +68,7 @@
   </head>
  
   <body>
-  	<img src="{{url_for('static', filename='neighborhoods.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
+  	<img src="{{url_for('static', filename='neighborhoods2.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
 
     <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -110,7 +110,7 @@
               <th style="text-align: center;">Price</th>
               <th style="text-align: center;">Beds</th>
               <th style="text-align: center;">Baths</th>
-              <th style="text-align: center;">Location</th>S
+              <th style="text-align: center;">Location</th>
               <th style="text-align: center;">Sqft</th>
               <th style="text-align: center;">Lot Size</th>
               <th style="text-align: center; width:30%;">URL</th>
