--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -100,7 +100,7 @@
     </nav>
       <div style="text-align: center; width:70%;">
         <script src="https://cdn3.vox-cdn.com/uploads/chorus_asset/file/7447791/sorttable.0.js"></script>
-        <table class="greyGridTable sortable" width="100" border="1" cellpadding="0" cellspacing="0">
+        <table class="greyGridTable sortable" width="" border="1" cellpadding="0" cellspacing="0">
           <thead>
             <tr>
               <th style="text-align: center;">Favorited House</th>
