fixing table width

--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -3,6 +3,10 @@
   <head>
     <style type="text/css">
           table.greyGridTable {
+            table-layout: auto;
+            width: 180px;    
+          }
+          table.greyGridTable {
             border: 2px solid #FFFFFF;
             width: 100px;
             text-align: center;
