--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -16,7 +16,7 @@
             async: false,
             success: function(data) {
                 // $('div#result').html(data)
-                window.location.href = "uploaded_file.html"
+                window.location.href = "uploaded_file"
                 console.log('Success!');
             },
           });
