--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -3,10 +3,6 @@
   <head>
     <style type="text/css">
           table.greyGridTable {
-            table-layout: auto;
-            width: 180px;    
-          }
-          table.greyGridTable {
             border: 2px solid #FFFFFF;
             width: 100px;
             text-align: center;
@@ -102,7 +98,7 @@
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
     </nav>
-      <div style="text-align: center; width:70%;">
+      <div style="text-align: center; width:auto">
         <script src="https://cdn3.vox-cdn.com/uploads/chorus_asset/file/7447791/sorttable.0.js"></script>
         <table class="greyGridTable sortable" width="" border="1" cellpadding="0" cellspacing="0">
           <thead>
