--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -102,17 +102,17 @@
       <table class="greyGridTable sortable" width="" border="1" cellpadding="0" cellspacing="0">
         <thead>
           <tr>
-            <th>Favorited House</th>
-            <th>Similarity Score</th>
-            <th>Property Type</th>
-            <th>Address</th>
-            <th>Price</th>
-            <th>Beds</th>
-            <th>Baths</th>
-            <th>Location</th>
-            <th>Sqft</th>
-            <th>Lot Size</th>
-            <th>URL</th>
+            <th align="center">Favorited House</th>
+            <th align="center">Similarity Score</th>
+            <th align="center">Property Type</th>
+            <th align="center">Address</th>
+            <th align="center">Price</th>
+            <th align="center">Beds</th>
+            <th align="center">Baths</th>
+            <th align="center">Location</th>
+            <th align="center">Sqft</th>
+            <th align="center">Lot Size</th>
+            <th align="center">URL</th>
           </tr>
         </thead>
         <tbody>
