--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -98,6 +98,12 @@
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
     </nav>
+    <style type="text/css">
+    td
+      {
+          padding:0 15px 0 15px;
+      }
+    </style>
     <script src="https://cdn3.vox-cdn.com/uploads/chorus_asset/file/7447791/sorttable.0.js"></script>
       <table class="greyGridTable sortable" width="" border="1" cellpadding="0" cellspacing="0">
         <thead>
