--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -4,13 +4,13 @@
     <style type="text/css">
           table.greyGridTable {
             border: 2px solid #FFFFFF;
-            width: 100px;
+            width: auto;
             text-align: center;
             border-collapse: collapse;
           }
           table.greyGridTable td, table.greyGridTable th {
             border: 1px solid #FFFFFF;
-            padding: 3px 4px;
+            padding: 10px 10px;
           }
           table.greyGridTable tbody td {
             font-size: 13px;
