took out welcome page

--- a/templates/data.html
+++ b/templates/data.html
@@ -39,7 +39,7 @@
     </head>
    
     <body>
-    	<img src="{{url_for('static', filename='neighborhoods.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
+    	<img src="{{url_for('static', filename='data.png')}}" style="width:100%; height:auto; margin:0 auto;"/>
 
       <!-- Static navbar -->
 
@@ -59,13 +59,10 @@
    
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li><a href="#">Seattle Data Example</a></li>
-              <li><a href="{{ url_for('favorites') }}">How to get favorites</a></li>
-              <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
-            </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="{{ url_for('welcome') }}">Welcome!</a></li>
+              <li><a href="#">Seattle Data Example</a></li>
+              <li><a href="{{ url_for('favorites') }}">How To</a></li>
+              <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!-- /.container -->
@@ -74,10 +71,11 @@
       <!-- Style for making table look appealing -->
       <style type="text/css">
         table.greyGridTable {
-          border: 2px solid #FFFFFF;
+          border: 1px solid #FFFFFF;
           width: 100%;
           text-align: center;
           border-collapse: collapse;
+          border-top: 3px solid black;
         }
         table.greyGridTable td, table.greyGridTable th {
           border: 1px solid #FFFFFF;
