--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -13,7 +13,8 @@
   </head>
  
   <body>
-  	<img src="{{url_for('static', filename='howto1.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
+    <br></br>
+  	<img src="{{url_for('static', filename='howto.png')}}" style="width:100%; height:auto; margin:0 auto;"/>
 
     <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -32,13 +33,10 @@
    
           <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Seattle Data Example</a></li>
-            <li><a href="{{ url_for('favorites') }}">How to get favorites</a></li>
-            <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
-          </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{ url_for('welcome') }}">Welcome!</a></li>
+            <li><a href="#">Seattle Data Example</a></li>
+            <li><a href="{{ url_for('favorites') }}">How To</a></li>
+            <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
