--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -30,6 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
+          <img src="{{url_for('static', filename='finddreamhouse.jpeg')}}" style="width:100%; height:auto; margin:auto;"/>
           <center>
             <h1 class="mb-5">Find houses that better suit your circumstances!</h1>
             <h3 class="mb-5">Upload your favorite houses dataset here (csv format only)</h3>
