--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
   </head>
  
   <body>
-  	<img src="{{url_for('static', filename='header.jpg')}}" style="width:100%; height:auto; margin:0 auto;"/>
+  	<img src="{{url_for('static', filename='easysearch.jpeg')}}" style="width:100%; height:auto; margin:0 auto;"/>
 
     <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -53,13 +53,10 @@
  
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ url_for('data') }}">Seattle Data Example</a></li>
             <li><a href="{{ url_for('favorites') }}">How to get favorites</a></li>
             <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{ url_for('welcome') }}">Welcome!</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!-- /.container -->
