--- a/templates/data.html
+++ b/templates/data.html
@@ -60,7 +60,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Seattle Data Example</a></li>
+              <li><a href="#">Seattle Data</a></li>
               <li><a href="{{ url_for('favorites') }}">How To</a></li>
               <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
             </ul>
