--- a/templates/index.html
+++ b/templates/index.html
@@ -54,8 +54,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="recipes-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{ url_for('data') }}">Seattle Data Example</a></li>
-            <li><a href="{{ url_for('favorites') }}">How to get favorites</a></li>
+            <li><a href="{{ url_for('data') }}">Seattle Data</a></li>
+            <li><a href="{{ url_for('favorites') }}">How To</a></li>
             <li><a href="{{ url_for('recommendations') }}">Recommendations</a></li>
           </ul>
         </div><!--/.nav-collapse -->
