--- a/templates/data.html
+++ b/templates/data.html
@@ -144,9 +144,13 @@
         <tbody>
           {% for row in data %}  <!--start for loop over variable data-->
             <tr onMouseOver="this.bgColor='#C7D9EC'" onMouseOut="this.bgColor='#FFFFFF'">
-            	{% for col in row %} 
-              <td>{{col}}</td>
-              {% endfor %}
+            {% for row in col %} 
+              {% if row.startswith('http') %}
+              <td><a href="{{ row }}">View</a></td>
+              {% else %}
+              <td>{{ row }}</td>
+              {% endif %}
+            {% endfor %}
 
             </tr>
           {% endfor %}           <!-- end for loop -->
