--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -122,7 +122,11 @@
           {% for col in data %}  <!--start for loop over variable data-->
           <tr onMouseOver="this.bgColor='#C7D9EC'" onMouseOut="this.bgColor='#FFFFFF'">
             {% for row in col %} 
-            <td>{{row}}</td>
+              {% if row.startswith('http') %}
+              <td><a href="{{ row }}">View</a></td>
+              {% else %}
+              <td>{{ row }}</td>
+              {% endif %}
             {% endfor %}
 
           </tr>
