links are now clickable

--- a/templates/data.html
+++ b/templates/data.html
@@ -142,8 +142,8 @@
           </tr>
         </thead>
         <tbody>
-          {% for row in data %}  <!--start for loop over variable data-->
-            <tr onMouseOver="this.bgColor='#C7D9EC'" onMouseOut="this.bgColor='#FFFFFF'">
+          {% for col in data %}  <!--start for loop over variable data-->
+          <tr onMouseOver="this.bgColor='#C7D9EC'" onMouseOut="this.bgColor='#FFFFFF'">
             {% for row in col %} 
               {% if row.startswith('http') %}
               <td><a href="{{ row }}">View</a></td>
@@ -151,8 +151,7 @@
               <td>{{ row }}</td>
               {% endif %}
             {% endfor %}
-
-            </tr>
+          </tr>
           {% endfor %}           <!-- end for loop -->
         </tbody>
       </table>
